--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ out/
 # Gradle files
 .gradle/
 build/
+gradle.properties
+gradle/
+gradlew
+gradlew.bat
 
 # Local configuration file (sdk path, etc)
 local.properties
