added FoodlocatorFragment, including location service, async http call searching for stores

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
 
     defaultConfig {
         applicationId "swd14.fh.catlicious"
-        minSdkVersion 14
-        targetSdkVersion 17
+        minSdkVersion 21
+        targetSdkVersion 25
     }
 
     buildTypes {
@@ -20,8 +20,10 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:support-v13:25.3.1'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services-plus:10.2.1'
+    compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
 }
 
