--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,9 @@ android {
         applicationId "swd14.fh.catlicious"
         minSdkVersion 21
         targetSdkVersion 25
+//        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunner 'at.fhj.mad.catlicious.fixture.CatliciousTestRunner'
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -25,8 +28,18 @@ dependencies {
     compile 'com.google.android.gms:play-services-plus:10.2.1'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-}
+    compile 'com.github.satyan:sugar:1.4'
+    testCompile 'junit:junit:4.12'
 
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'com.android.support.test:rules:0.5'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+    androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile 'junit:junit:4.12'
+    androidTestCompile 'org.mockito:mockito-all:1.10.19'
+
+
+}
 
 configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
