--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "swd14.fh.catlicious"
+        applicationId "at.fhj.mad.catlicious"
         minSdkVersion 21
         targetSdkVersion 25
 //        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
