--- a/catlicious-common/build.gradle
+++ b/catlicious-common/build.gradle
@@ -9,6 +9,7 @@ repositories {
 }
 
 dependencies {
+    compileOnly 'com.google.android:android:4.1.1.4'
     testCompile 'org.codehaus.groovy:groovy-all:2.4.11'
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
 }
